; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ntb/extr_ntb.c_ntb_peer_spad_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ntb/extr_ntb.c_ntb_peer_spad_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ntb_child = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ntb_peer_spad_write(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.ntb_child*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.ntb_child* @device_get_ivars(i32 %8)
  store %struct.ntb_child* %9, %struct.ntb_child** %7, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @device_get_parent(i32 %10)
  %12 = load i32, i32* %5, align 4
  %13 = zext i32 %12 to i64
  %14 = load %struct.ntb_child*, %struct.ntb_child** %7, align 8
  %15 = getelementptr inbounds %struct.ntb_child, %struct.ntb_child* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = add nsw i64 %13, %16
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @NTB_PEER_SPAD_WRITE(i32 %11, i64 %17, i32 %18)
  ret i32 %19
}

declare dso_local %struct.ntb_child* @device_get_ivars(i32) #1

declare dso_local i32 @NTB_PEER_SPAD_WRITE(i32, i64, i32) #1

declare dso_local i32 @device_get_parent(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
